Fix QF